--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
   "name": "rappix/paypal",
+  "repositories": [{
+    "type": "vcs",
+    "url": "https://github.com/rappix/laravel-paypal"
+  }],
   "type": "library",
   "description": "Laravel plugin For Processing Payments Through Paypal Express Checkout. Can Be Used Independently With Other Applications.",
   "keywords": ["http", "rest", "web service", "paypal", "laravel paypal"],
